<resources>
    <string name="app_name">Aladin DM</string>
    <string name="app_name_short">Aladin DM</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="download_manager">Download Manager</string>
    <string name="settings">Settings</string>
    <string name="legal">Legal Information</string>
    <string name="exit">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="setting">Settings</string>
    <string name="something">Something</string>
    <string name="ok">OK</string>
    <string name="youtube">Youtubevideo with nacryty.mp4</string>
    <string name="url">Url</string>
    <string name="name">Name</string>
    <string name="add">ADD</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="qualities">Video Qualities</string>
    <string name="video">Video</string>
    <string name="save_video">SAVE VIDEOS</string>
    <string name="videos">(0)</string>
    <string name="download">Download</string>
    <string name="copy_url">Copy Url </string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="share">Share</string>
    <string name="add_download">New Download</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="you_have_a_clean_bookmark">You have a clean bookmark</string>
    <string name="itTimeToAddSomeBookmarkToList">Press the
        <b>+ button</b>
        at the bottom.
    </string>
    <string name="folder_picker">Folder Picker</string>
    <string name="download_path">/sdcard/Aladin DM</string>
    <string name="___">. . . . .</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New</string>
    <string name="loading">Loading .....</string>
    <string name="enabled">Enabled</string>
    <string name="back_it_up">Back-It-Up-HD (Mp4)</string>
    <string name="social_media_like">Fb &amp; Twitter</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="detail">Details</string>
    <string name="refresh_link">Refresh link</string>
    <string name="force_assemble">Force assemble</string>
    <string name="search">Search</string>
    <string name="yes_please">YES PLEASE</string>
    <string name="share_with_friends_message">" is awesome. Would you like to take a moment to share it with your friends ?"
    </string>
    <string name="your_feedback">Your feedback</string>
    <string name="send_device_information">Send device information</string>
    <string name="bookmark_editor">Bookmark Editor</string>
    <string name="link">Link</string>
    <string name="download_title">Download Title</string>
    <string name="path_setting">Path Setting</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="file_name">File name </string>
    <string name="bookmark_url">Bookmark Url</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="up">Up</string>
    <string name="close">Close</string>
    <string name="update_app_setting">Update app settings</string>
    <string name="download_text_detail">[Downloading 252kb/4.49Kb]</string>
    <string name="download_path_string">Download Directory</string>
    <string name="file_size">File Size</string>
    <string name="download_system_fail_message">download system could not be null.</string>
    <string name="replace_download_link">Replace Download Link</string>
    <string name="download_refresh_link_help_description">Replacing the download link is very useful if
        the existing link is dead or outdated.
    </string>
    <string name="paste_download_link">Please paste the new link below</string>
    <string name="file_size_not_matching_error">The file size of the entered link must be match with the old file
        size.
    </string>
    <string name="url_unsupported_protocol_error">The entered URL must be of http or https protocol.</string>
    <string name="congrat_message_link_saving">Congrats! the new link has replaced &amp; saved successfully.</string>
    <string name="enable_catalog">Enable catalog</string>
    <string name="download_detail">Download Detail</string>
    <string name="file_path">File Path</string>
    <string name="file_url">File Url</string>
    <string name="replace">Replace</string>
    <string name="replace_link">Replace Link</string>
    <string name="download_option">Download Options</string>
    <string name="download_parts">Download parts : </string>
    <string name="number_of_buffer_size">Buffer size :</string>
    <string name="enable_auto_resume">Enable auto resume</string>
    <string name="enable_tts_notification">Enable TTS notification</string>
    <string name="enable_smart_download">Enable smart download</string>
    <string name="message_box">Message Box</string>
    <string name="shareWithPopularApps">Share Aladin with....</string>
    <string name="complete_option">File Options</string>
    <string name="open">Open</string>
    <string name="select">Select</string>
    <string name="rename">Rename</string>
    <string name="restartAgain">Restart</string>
    <string name="remove_list">Remove list</string>
    <string name="renameEditor">Rename Editor</string>
    <string name="option">Option</string>
    <string name="selectAll">Select all</string>
    <string name="cancelSelection">Cancel</string>
    <string name="totalTime">Total Time</string>
    <string name="id">Download ID</string>
    <string name="totalDownloadParts">Download Parts</string>
    <string name="bookmark_option">Bookmark Options</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="other">Others App</string>
    <string name="propertyDetail">Property Details</string>
    <string name="deleteFromSdcard">Delete File</string>
    <string name="removeTask">Remove Task</string>
    <string name="download_error_found_message">Download Error found from Aladin DM. Please Check out.</string>
    <string name="outdated_link_dialog_message">The file link has outdated. Please replace the file link with a new
        one. Other wise it wont be able to complete the download.
    </string>
    <string name="file_url_cant_be_change_from_here">"File Url can not be change from here. Use \"Replace Link\"
        instead. "
    </string>
    <string name="moving_file_wait">Moving the file…wait…</string>
    <string name="error_found_try_later">Some error has found. Please try again later.</string>
    <string name="force_assemble_complete">Force assemble is completed successfully.</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="auto_resume">Auto Resume</string>
    <string name="smart_download_parting">Smart Download</string>
    <string name="file_catalog">File Cataloging</string>
    <string name="tts_notification">TTS Notification</string>
    <string name="kb_16">16 KB</string>
    <string name="download_buffer_size">Download Buffer Size</string>
    <string name="kb_1">1 KB</string>
    <string name="kb_2">2 KB</string>
    <string name="kb_3">3 KB</string>
    <string name="kb_4">4 KB</string>
    <string name="kb_8">8 KB</string>
    <string name="maximum_running_download">Max Running Downloads</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="default_download_part">Download Parts</string>
    <string name="_12">12</string>
    <string name="pause_after_errors">Pause After Errors</string>
    <string name="_121">121</string>
    <string name="TotalNumberOfError">Total number of download errors</string>
    <string name="progress_interval">Progress Interval</string>
    <string name="sec_1">1 Sec</string>
    <string name="sec_2">2 Sec</string>
    <string name="sec_3">3 Sec</string>
    <string name="searchGoogle">Search Google</string>
    <string name="search_for_file">Search for any file</string>
    <string name="turbo_booster">Turbo Booster</string>
    <string name="onlyViaWifi">Only Via Wi-Fi</string>
    <string name="AndroidStock">Android Stock</string>
    <string name="user_agent">User Agent</string>
    <string name="userAgentSingleLine">User Agent</string>
    <string name="basic_download_settings">Basic Download Settings</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="icon_in_notification">Icon Notification</string>
    <string name="vibrationIntercept">Vibration Intercept</string>
    <string name="vibration">Vibration strength</string>
    <string name="vibrationAfterNotification">Vibration For Notification</string>
    <string name="moreSettings">More Settings</string>
    <string name="resetAllSettingsDisc">Reset all of the application settings.</string>
    <string name="reset_settings">Reset All Settings</string>
    <string name="turnOffService">Exit Background Service</string>
    <string name="kb_128">128 KB</string>
    <string name="kb_64">64 KB</string>
    <string name="kb_32">32 KB</string>
    <string name="waiting_for_network">Waiting for network…</string>
    <string name="openIncompleteFile">Open Incomplete file</string>
    <string name="OptionForRunningTask">Options Of Running Download Task</string>
    <string name="help_of_options_of_running_download_task">Select the options you like to see as the available options for running downloads.
    </string>
    <string name="running_download_options">Running Download Options</string>
    <string name="middleButton">Middle</string>
    <string name="javaScriptInBrowser">JavaScript In Browser</string>
    <string name="browserSetting">Browser Settings</string>
    <string name="loadImages">Load Images</string>
    <string name="desktopMode">Desktop Mode</string>
    <string name="changeAppLanguage">Change App Language</string>
    <string name="bengali">Bengali</string>
    <string name="fastAccessRoom">Fast Access Room</string>
    <string name="appSettings">App Settings</string>
    <string name="exitApplication">Exit Application</string>
    <string name="likeUs">Like us</string>
    <string name="english">English</string>
    <string name="download_notification">Download Notification</string>
    <string name="google">Google</string>
    <string name="searchEngine">Search Engine</string>
    <string name="bing">Bing</string>
    <string name="duckduckgo">Duck Duck GO</string>
    <string name="searchWeb">Search The Web</string>
    <string name="ttsNotificationAfterDownload">TTS On Download Complete</string>
    <string name="service_notification_removal">Service Notification Remove</string>
    <string name="help_of_remove_notification">If enabled, the service notification will be removed after a period of
        inactivity of the app.
    </string>
    <string name="help_of_auto_resume">If enabled, downloads will be resumed automatically after any error/break of
        network connection.
    </string>
    <string name="help_of_downlaod_buffer_size">Buffer size is used for determining how efficiently the downloads will
        run.
    </string>
    <string name="help_of_pause_after_error">After the following number of errors, downloads will be paused
        automatically.
    </string>
    <string name="help_of_ui_progress_interval">The time you select here will be used as the interval time for updating download progress.
    </string>
    <string name="border">Border</string>
    <string name="_2g_network_connection">2G Network</string>
    <string name="download_progress_interval">Download Progress Interval</string>
</resources>