<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/dialog_style">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_txt_title"
            android:text="@string/download_progress_interval"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_border_deep"/>

    <TextView
            android:id="@+id/dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_txt_dialog_sub_title"
            android:text="@string/help_of_ui_progress_interval"
            android:padding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <RadioButton
                    android:id="@+id/_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:checked="true"

                    android:padding="@dimen/dp_10"

                    style="@style/style_txt_dialog_bnt"
                    android:button="@drawable/ic_checkbox_button"

                    android:text="@string/sec_1"/>

            <RadioButton
                    android:id="@+id/_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:checked="true"

                    android:padding="@dimen/dp_10"

                    style="@style/style_txt_dialog_bnt"
                    android:button="@drawable/ic_checkbox_button"
                    android:text="@string/sec_2"/>

            <RadioButton
                    android:id="@+id/_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:checked="true"

                    android:padding="@dimen/dp_10"

                    style="@style/style_txt_dialog_bnt"
                    android:button="@drawable/ic_checkbox_button"
                    android:text="@string/sec_3"/>

        </RadioGroup>
    </ScrollView>

</LinearLayout>
